Fix code overflow

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -194,6 +194,10 @@ img {
           border-radius: 4px;
 }
 
+.highlight > pre {
+  overflow: auto;
+}
+
 code {
   color: lighten($text-color, 35%);
   background-color: lighten($background-color, 35%);
